# MicroC2

./: .gitignore  README.md  install.sh
.foxguard/: baseline.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
agent/: Cargo.toml  SECURITY_FIXES_IMPLEMENTATION.md  SECURITY_FIX_KEY_DERIVATION.md  TESTING.md  TEST_SUITE_SUMMARY.md  agent_test_suite.py  build.rs  dev.sh  install_test_deps.sh  key_derivation_demo.py  quick_test.py
agent/src/: config.rs  dormant.rs  dormant_aes256.rs  dormant_chacha20poly1305.rs  lib.rs  main.rs  opsec.rs  safe_mutex.rs  util.rs
agent/src/commands/: command_shell.rs  obfuscated.rs
agent/src/file_handling/: download.rs  upload.rs
agent/src/networking/: egress.rs  socks5.rs  socks5_pivot.rs  socks5_pivot_server.rs
docs/: development-workflow.md
server/internal/behaviour/: http_polling.go
server/internal/handlers/api/: listener_handlers.go
server/internal/listeners/: listener.go  listener_manager.go  listener_manager_test.go
server/pkg/communication/: server_manager.go
