[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.11.8" # Removed for size reduction
get_if_addrs = "0.5.3"
hostname = "0.4.1"
libc = "0.2.172"
log = "0.4.27"
once_cell = "1.21.3"
os_info = "3.12.0"
rand = "0.9.2"
reqwest = { version = "0.12.15", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
socks5-proxy = "0.1.1"
tokio = { version = "1.45.0", features = ["rt", "macros", "sync", "net", "io-util", "time", "fs"] }
tokio-socks = "0.5.2"
zeroize = "1.8.1"
chrono = "0.4.41"
sysinfo = "0.37.0"
winapi = { version = "0.3.9", features = ["wtsapi32", "sysinfoapi"] }
obfstr = "0.4.4"
bincode = { version = "2.0.0", features = ["derive"] }
aes-gcm = "0.10.3"
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }
rand_core = { version = "0.9.3", features = ["std"] }

# Add dependencies needed for the build.rs script.
# These are NOT optional because the build script needs to be able to
# compile against them. The `cfg` flags inside build.rs will handle
# which code path is actually used.
[build-dependencies]
aes-gcm = "0.10.3"
chacha20poly1305 = { version = "0.10.1", features = ["heapless"] }

[features]
default = ["encryption-chacha"]
# Feature to select AES-GCM for in-memory and config encryption
encryption-aes = []
# Feature to select ChaCha20-Poly1305 for in-memory and config encryption
encryption-chacha = []

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1  # Reduce number of codegen units to increase optimizations
panic = "abort"  # Remove panic unwinding to reduce binary size
strip = true     # Strip symbols from binary